# JestonYoloROS

./: README.md
resources/: README-CN.md  README-EN.md
yolo_detect/: CMakeLists.txt  package.xml
yolo_detect/config/: coco_labels.yaml
yolo_detect/launch/: 2d_classification.launch  2d_detect.launch  2d_obb.launch  2d_pose_estimate.launch  2d_segmentation.launch
yolo_detect/msg/: Classification.msg  ClassificationArray.msg  Detection.msg  DetectionArray.msg  OBBDetection.msg  OBBDetectionArray.msg  PoseArray.msg  PoseEstimate.msg  PoseKeypoint.msg  Segmentation.msg  SegmentationArray.msg
yolo_detect/scripts/: yolo_2d_classification.py  yolo_2d_detection.py  yolo_2d_obb.py  yolo_2d_pose_estimate.py  yolo_2d_segmentation.py
